<resources>
    <string name="app_name">VoluntarioSOS</string>
    <string name="auth0_preferences">AUTH0_SHARED_PREFERENCES_KEY</string>
    <string name="auth0_client_id">i50CLFCuLpfM0dBDxQ5pme8by8HQqFbL</string>
    <string name="auth0_domain">voluntariosos-app.auth0.com</string>
    <string name="auth0_callback">/android/com.app.voluntariosos.mvpauth0/callback</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signup">Ingresar</string>
    <string name="profile">Mi Perfil</string>
    <string name="volunteer">Voluntariado</string>
    <string name="capacitationCenters">Centros de Capacitacion</string>
    <string name="map">Mapa</string>
    <string name="emergencies">Ultimas Emergencias</string>
    <string name="opcion_1">Opción 1</string>
    <string name="opcion_2">Opción 2</string>
    <string name="seccion_3">Sección 3</string>
    <string name="usuario"></string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="iaut">Inicio de sesión automático</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_alert">AlertActivity</string>

    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="parar_actualizaciones">Parar actualizaciones</string>
    <string name="iniciar_actualizaciones">Iniciar actualizaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mi_primer_widget">Mi Primer Widget</string>

    <string name="Latitud">Latitud: </string>
    <string name="Longitud">Longitud: </string>
    <string name="ErrorLogin">Error al ingresar</string>
    <string name="hola">Bienvenido Nuevamente!</string>
    <string name="loginTitle">Login Page</string>
    <string name="loginCancelled">Log In - Cancelado</string>
    <string name="logInSuccess">Log In - Exitoso</string>
    <string name="callCancel">Cancelar o Llamando al Same en...</string>
    <string name="callSame">Llamando al SAME!</string>
    <string name="GPSDisableCallSame">GPS deshabilitado, Llamando al SAME!</string>
    <string name="GPSDisable">El GPS deshabilitado!</string>
    <string name="Emergencies">Emergencies</string>
    <string name="confirm">Confirmar?</string>
    <string name="si">Ayudo</string>
    <string name="no">NO Puedo</string>
    <string name="terms">Aceptas los terminos y condiciones?</string>
    <string name="dialogos">Dialogos</string>
    <string name="confirmCanceled">Confirmacion Cancelada.</string>
    <string name="volno">No sos voluntario</string>
    <string name="volquiero">Ser voluntario</string>
    <string name="save">Guardardo</string>
    <string name="updateUser">updateUser</string>
    <string name="latitudDesconocida">Latitud: (desconocida)</string>
    <string name="longitudDesconocida">Longitud: (desconocida)</string>
    <string name="pemisoDenegado">Permiso denegado</string>
    <string name="googlePlayError">Se ha interrumpido la conexión con Google Play Services</string>
    <string name="calcError">no se pudo calcular</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="about">Sobre VoluntarioSOS</string>
    <string name="DataProfile">Debe completar el perfíl</string>

    <!-- STRING Auth0 en ESPAÑOL -->
    <string name="com_auth0_lock_action_forgot_password">Olvidaste tu contraseña?</string>
    <string name="com_auth0_lock_action_log_in">Iniciar Sesión</string>
    <string name="com_auth0_lock_action_sign_up">Registrarme</string>
    <string name="com_auth0_lock_forms_separator">O</string>
    <string name="com_auth0_lock_sign_up_terms">Al registrarse, usted acepta nuestros términos de servicio y política de privacidad.</string>
    <string name="com_auth0_lock_title_change_password">Restablecer Contraseña</string>
    <string name="com_auth0_lock_description_change_password">Por favor, introduzca su dirección de correo electrónico. Le enviaremos un correo para restablecer su contraseña.</string>
    <string name="com_auth0_lock_input_error_username" formatted="false">Nombre de usuario no válido. Sólo puede contener entre 1 y 15 caracteres alfanuméricos y  \'_\'.</string>
    <string name="com_auth0_lock_input_error_email">Email invalido</string>
    <string name="com_auth0_lock_input_error_password">Contraseña invalida</string>
    <string name="com_auth0_lock_input_error_username_email">Usuario o Email invalido.</string>
    <string name="com_auth0_lock_password_strength_title_must_have">Debe tener:</string>
    <string name="com_auth0_lock_password_strength_chars_length" formatted="false">El menos 8 caracteres.</string>
    <string name="com_auth0_lock_password_strength_title_at_least">Y contener al menos 3 de los siguientes 4 tipos de caracteres:</string>
    <string name="com_auth0_lock_password_strength_lowercase_letters">Letras minúsculas (a-z)</string>
    <string name="com_auth0_lock_password_strength_uppercase_letters">Letras mayúsculas (A-Z)</string>
    <string name="com_auth0_lock_password_strength_numbers">Números (0–9)</string>
    <string name="com_auth0_lock_password_strength_special_chars">Caracteres especiales (!@#$%*)</string>
    <string name="com_auth0_lock_hint_username_or_email">Usuario/Correo</string>
    <string name="com_auth0_lock_hint_password">Contraseña</string>
    <string name="com_auth0_lock_db_change_password_message_success">Acabamos de enviarle un correo electrónico para restablecer su contraseña</string>
    <string name="com_auth0_lock_db_login_error_invalid_credentials_message">Correo o Contraseña INCORRECTA</string>
    <string name="com_auth0_lock_db_signup_user_already_exists_error_message">El usuario ya existe</string>
    <string name="com_auth0_lock_configuration_retrieving_error">Problemas de conexión. Asegúrate de tener conexión a internet.</string>
    <string name="com_auth0_lock_action_retry">Volver a intentar.</string>
    <string name="com_auth0_lock_db_login_error_message">Error al procesar el inicio de sesión</string>

</resources>
